<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="subtitle">My Nanodegree Apps!</string>
    <string name="spotify">Spotify Streamer</string>
    <string name="superduo">Super Duo</string>
    <string name="bigger">Build It Bigger</string>
    <string name="reader">XYZ Reader</string>
    <string name="capstone">Capstone</string>
    <string name="action_settings">Settings</string>
</resources>
